Update bio to reflect current student status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo">Kranthi Kumar.</div>
+            <div class="logo">G.Kranthi.</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -39,8 +39,8 @@
             <div class="about-container">
                 <img src="profile-pic.jpg" alt="A photo of G. Kranthi Kumar Reddy" class="profile-pic">
                 <p>
-                    Hello! I'm a Data Engineer based in Hyderabad. As a recent graduate, I am passionate about designing and building robust data pipelines to transform raw data into actionable insights. I have a strong foundation in Python and SQL, and I am skilled in ETL processes and data modeling. I am eager to apply my skills with technologies like Apache Spark and cloud platforms like AWS to solve complex data challenges.
-                </p>
+    Hello! I'm a Data Engineer based in Hyderabad. As a final-year B.Tech student, I am passionate about designing and building robust data pipelines to transform raw data into actionable insights. I have a strong foundation in Python and SQL, and I am skilled in ETL processes and data modeling. I am eager to apply my skills with technologies like Apache Spark and cloud platforms like AWS to solve complex data challenges.
+</p>
             </div>
         </section>
 
