Add Skills and Education sections

--- a/index.html
+++ b/index.html
@@ -43,6 +43,48 @@
 </p>
             </div>
         </section>
+        <section id="skills">
+            <h2>My Skills</h2>
+            <div class="skills-container">
+                <div class="skill-category">
+                    <h3>Languages</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>Java</li>
+                        <li>HTML/CSS</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Databases & Big Data</h3>
+                    <ul>
+                        <li>PostgreSQL</li>
+                        <li>MySQL</li>
+                        <li>MongoDB</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Tools & Platforms</h3>
+                    <ul>
+                        <li>Git & GitHub</li>
+                        <li>AWS (S3, EC2)</li>
+                        <li>Docker</li>
+                        <li>Jupyter Notebook</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="education">
+            <h2>Education</h2>
+            <div class="education-container">
+                <div class="education-card">
+                    <h3>B.Tech - ECE</h3>
+                    <p class="university">Sreenidhi Institute of Science and Technology, Hyderabad</p>
+                    <p class="dates">2022 - 2026</p>
+                </div>
+            </div>
+        </section>
 
         <section id="projects">
             <h2>My Projects</h2>
