Add new professional navbar

--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 
     <header>
         <nav class="navbar">
-            <div class="logo">G.Kranthi.</div>
+            <a href="#" class="nav-logo">GK</a>
+            
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+
+            <div class="nav-actions">
+                <a href="https://github.com/Gkranthi07" target="_blank" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/kranthi-kumar-reddy-g-388911297" target="_blank" class="social-link">LinkedIn</a>
+            </div>
+
             <div class="burger">
                 <div class="line1"></div>
                 <div class="line2"></div>
